--- a/WakeOnLanCore/WakeOnLanCore.csproj
+++ b/WakeOnLanCore/WakeOnLanCore.csproj
@@ -19,5 +19,8 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WakeOnLanCore.WOL\WakeOnLanCore.WOL.csproj" />
+  </ItemGroup>
 
 </Project>
